# Medical-Research-Assistant

./: .coverage  .gitignore  .my_semantic_cache.db  .pre-commit-config.yaml  HEY.MD  PubMedDownloader.py  README.md  app.py  batchprocessor.py  common_helpers.py  config.py  document_processor.py  dummy_app.py  graph_viz.py  knowledge_graph.py  my_knowledge_graph.pkl  notebook.ipynb  playground.ipynb  prompt_caching.py  pyproject.toml  pytest.ini  rag_chain.py  requirements.txt  retriever.py  streaming.py  utils.py  vectorstore.py
.github/: dependabot.yml
.github/workflows/: dependabot.yml  main.yml  python-lint.yml
data/output/processed_pmc_data/batch_details/: batch_001.json  batch_002.json  batch_003.json  batch_004.json  batch_005.json  batch_006.json  batch_007.json  batch_008.json  batch_009.json  batch_010.json  batch_011.json  batch_012.json  batch_013.json  batch_014.json  batch_015.json  batch_016.json  batch_017.json  batch_018.json  batch_019.json  batch_020.json  batch_021.json  batch_022.json  batch_023.json  batch_024.json  batch_025.json  batch_026.json
my_semantic_faiss_index/: index.faiss  index.pkl
notebooks/: dataset.csv  gold_standard_dataset.json  knowledge_graph.json  laws.ipynb  notebook.ipynb
output/pmc_chunks/: processing_log.json
output/pmc_chunks/batch_details/: batch_001.json  batch_002.json  batch_003.json  batch_004.json  batch_005.json  batch_006.json  batch_007.json  batch_008.json  batch_009.json  batch_010.json  batch_011.json  batch_012.json  batch_013.json  batch_014.json  batch_015.json  batch_016.json  batch_017.json  batch_018.json  batch_019.json  batch_020.json  batch_021.json  batch_022.json  batch_023.json  batch_024.json  batch_025.json  batch_026.json
src/core/: common_helpers.py  config.py  main.py  utils.py
src/data_processing/: batch_processor.py
src/knowledge_graph/: graph_viz.py  knowledge_graph.py
src/medical_graph_rag/core/: config.py  main.py  utils.py
src/medical_graph_rag/data_processing/: batch_processor.py  document_processor.py  gold_standard.py  pubmed_downloader.py
src/medical_graph_rag/knowledge_graph/: graph_viz.py  knowledge_graph.py
src/medical_graph_rag/nlp/: prompt_caching.py  rag_chain.py  vectorstore.py
src/nlp/: prompt_caching.py  rag_chain.py  vectorstore.py
tests/: batch_test.py  conftest.py  docprocessing_test.py  prompt_test.py  samples.py  test3.py  test_depth.py  test_prompt_caching.py  test_vectorstore.py  tests.py  vector_test.py
