[project]
name = "finalrag"
version = "0.1.0"
description = "Medical RAG to cap what I've learnt through the RAG series"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.15.0",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.24",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "numpy>=2.2.6",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[tool.bandit]
exclude_tests = [
    "B403", # Disables the 'import pickle' warning (B403)
]
